# auth_proxy

./: README.md  pyproject.toml
src/auth_proxy/: __init__.py  api.py  data_models.py  dispatch.py  fritz.py  main.py
src/auth_proxy/auth_handler/: __init__.py  api.py  fritz.py  gs1900.py  omv.py  sonnen.py
