[project]
name = "auth-proxy"
version = "0.1.0"
dependencies = [
    "mitmproxy",
    "pydantic>=2.0.0",
    "typing-extensions; python_version < '3.11'",
    "pyyaml",
    "passlib",
]
requires-python = ">= 3.9"

[project.scripts]
auth-proxy = "auth_proxy.main:main"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
per-file-ignores = ["__init__.py:F401"]
max-line-length = 120
